[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/beach-sand.png" type="Texture" id=1]
[ext_resource path="res://assets/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Next.png" type="Texture" id=3]
[ext_resource path="res://assets/Next-clicked.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Coconut.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/pearl.png" type="Texture" id=8]
[ext_resource path="res://Game.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemy/Scenes/EnemySpeedy.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemy/Scenes/EnemyTank.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemy/Scenes/EnemyHooker.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemy/Scenes/SimpleEnemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Crab.png" type="Texture" id=14]


[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="Intro" type="Node2D"]
script = ExtResource( 5 )
game_scene = ExtResource( 9 )

[node name="beach-sand" type="Sprite" parent="."]
position = Vector2( 506.516, 304.072 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 829.184, 381.025 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Player"]

[node name="Coconut" parent="." instance=ExtResource( 6 )]
position = Vector2( 374.331, 354.449 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Pearls" type="Node2D" parent="."]

[node name="pearl" type="Sprite" parent="Pearls"]
position = Vector2( 916.301, 349.158 )
scale = Vector2( 0.141225, 0.141225 )
texture = ExtResource( 8 )

[node name="pearl2" type="Sprite" parent="Pearls"]
position = Vector2( 982.778, 312.634 )
scale = Vector2( 0.141225, 0.141225 )
texture = ExtResource( 8 )

[node name="pearl3" type="Sprite" parent="Pearls"]
position = Vector2( 927.919, 292.389 )
scale = Vector2( 0.141225, 0.141225 )
texture = ExtResource( 8 )

[node name="SmallCrab" type="Sprite" parent="."]
position = Vector2( 662.05, 330.848 )
rotation = -2.41812
scale = Vector2( 0.039735, 0.039735 )
texture = ExtResource( 14 )

[node name="SmallCrab2" type="Sprite" parent="."]
position = Vector2( 783.712, 448.708 )
rotation = -0.874533
scale = Vector2( 0.039735, 0.039735 )
texture = ExtResource( 14 )

[node name="SmallCrab3" type="Sprite" parent="."]
position = Vector2( 771.545, 296.631 )
rotation = -1.90014
scale = Vector2( 0.039735, 0.039735 )
texture = ExtResource( 14 )

[node name="EnemyHooker" parent="." instance=ExtResource( 12 )]
position = Vector2( 60.0403, 240.997 )

[node name="EnemySpeedy" parent="." instance=ExtResource( 10 )]
position = Vector2( 58.7035, 421.468 )

[node name="EnemyTank" parent="." instance=ExtResource( 11 )]
position = Vector2( 188.375, 243.67 )

[node name="SimpleEnemy" parent="." instance=ExtResource( 13 )]
position = Vector2( 110.84, 105.977 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 46.0
margin_top = 79.646
margin_right = 973.0
margin_bottom = 117.646
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.458824, 0.356863, 0.027451, 1 )
text = "Message will appear here"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="."]
margin_left = 769.8
margin_top = 463.429
margin_right = 980.8
margin_bottom = 572.429
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="TextureButton" parent="."]
margin_left = 248.336
margin_top = 582.64
margin_right = 459.336
margin_bottom = 691.64
rect_rotation = 180.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="screen_exited" from="Player/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="PrevButton" to="." method="_on_PrevButton_pressed"]
